--- a/uses_api.html
+++ b/uses_api.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1 style="width: 50%; text-align: center; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">What is the Tide in Palm Beach</h1>
+    <h1 style="width: 50%; text-align: center; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">What is the Tide in Palm Beach?</h1>
     <p id="currentTide" style="width: 50%; text-align: center; font-family: 'Courier New', Courier, monospace;"></p>
     <p id="tideChange" style="width: 50%; text-align: center; font-family: 'Courier New', Courier, monospace;"></p>
 
